--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,12 @@ input {
   left: 35%;
 }
 
+.poweredBy {
+  margin-top: 175px;
+  text-align: center;
+  padding-bottom: 50px;
+}
+
 @media all and (max-width: 600px) {
   input {
     width: 100%;
